# fastapi-mongo-boilerplate

./: .env.example  .gitignore  Dockerfile  LICENSE  compose.tests.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run-tests.yml
src/: app.py  test_app.py
src/api/: dependencies.py
src/api/models/: User.py  __init__.py
src/api/repositories/: User.py  __init__.py
src/api/routers/: Auth.py  User.py  __init__.py
src/api/schemas/: Auth.py  User.py  __init__.py
src/api/services/: Auth.py  User.py  __init__.py
src/core/: __init__.py  config.py  db.py  exceptions.py  security.py
src/tests/: conftest.py  test_Auth.py  test_User.py
src/tests/auth/: 1_deactivate_test.py  2_activate_test.py  change_password_test.py  conftest.py  login_test.py  lost_password_test.py  refresh_test.py  register_test.py  verify_test.py
src/tests/user/: conftest.py  me_test.py  root_test.py  search_test.py
src/types/: TokenType.py  __init__.py
